feat: example landing page

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webpack App</title>
+    <title>Come to us</title>
   </head>
-  <body>
+  <body >
+    <div>
+        <!-- <img src="./assets/img/landing_img-1.jpg" class="absolute bg-blend-screen blur-md bg-cover bg-no-repeat "/> -->
+        <header class="container mx-auto">
+            <!-- 1. header: contact social icon -->
+            <!-- 2. menu -->
+            <div class="flow-root">
+                <!-- left:  logo -->
+                <div class="pl-6 float-left logo pt-6">
+                    <img src="assets/img/logo.svg" />
+                </div>
+                <!-- right: menu -->
+                <div>
+                    <nav>
+                        <ul class="text-xl font-bold text-blue-500 float-right items-center space-x-5 flex-row flex p-6 font-sans">
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#">News</a>
+                            </li>
+                            <li>
+                                <a href="#">Our Service</a>
+                            </li>
+                            <li>
+                                <a href="#">Contact Us</a>
+                            </li>
+                            <li>
+                                <a href="#">Search</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <!-- 3. banner:  -->
+        <div class="container mx-auto hero-banner">
+            <img src="">
+            <div class="introduction-hello">
+                <p>hi, there</p>
+            </div>
+            <div class="slider-introduction">
+                <p>this is slider</p>
+            </div>
+        </div>
+    </div>
+    
+    <!-- 4. main services -->
+    <div class="our-service">
+        <div class="our-service-part-1">1</div>
+        <div class="our-service-part-2">2</div>
+        <div class="our-service-part-3">3</div>
+    </div>
+    <!-- 5. what we do -->
+    <div class="what-we-do">
+        <p>what we do</p>
+    </div>
+    <!-- 6. what we done -->
+    <!-- 7. our team -->
+    <!-- 8. latest news -->
+    <!-- 9. footer -->
     <h1 class="text-4xl text-blue-700">My Webpack + Tailwind App nice once</h1>
     <script src="bundle.js"></script>
   </body>
