--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Come to us</title>
   </head>
-  <body >
+  <body class="">
+    <!-- 1. header -->
     <div>
-        <!-- <img src="./assets/img/landing_img-1.jpg" class="absolute bg-blend-screen blur-md bg-cover bg-no-repeat "/> -->
-        <header class="container mx-auto">
-            <!-- 1. header: contact social icon -->
+        <header class="bg bg-cyan-900">
+            <div class="container mx-auto flow-root flex-row">
+                <!-- 1. header: contact social icon -->
+                <div class="contact-info float-left flow-root py-6 align-middle">
+                    <div class="float-left flex items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-gray-800 dark:text-red-600 size-7">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
+                        </svg>
+                        <span class="mx-2 text-white">99 Roving St., Big City, PKU 23456</span>
+                    </div>
+                    <div class="float-right flex items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-gray-800 dark:text-red-600 size-7">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.25 9.75v-4.5m0 4.5h4.5m-4.5 0 6-6m-3 18c-8.284 0-15-6.716-15-15V4.5A2.25 2.25 0 0 1 4.5 2.25h1.372c.516 0 .966.351 1.091.852l1.106 4.423c.11.44-.054.902-.417 1.173l-1.293.97a1.062 1.062 0 0 0-.38 1.21 12.035 12.035 0 0 0 7.143 7.143c.441.162.928-.004 1.21-.38l.97-1.293a1.125 1.125 0 0 1 1.173-.417l4.423 1.106c.5.125.852.575.852 1.091V19.5a2.25 2.25 0 0 1-2.25 2.25h-2.25Z" />
+                          </svg>                          
+                        <span class="mx-2 text-white">Hot Line : 123-234-1234</span>
+                    </div>
+                </div>
+                <div class="social-contact float-right flex flex-row py-6 align-middle space-x-5">
+                    <button class="icon-before icon-chevron-right icon-space-sm">
+                        <!-- Label -->
+                    </button>
+                    <div><i class="fab fa-facebook  dark:text-red-600  text-gray-800  icon-space-sm icon-before w-4 h-4"></i></div>
+                    <i class="text-white fab fa-instagram icon-space-sm icon-before"></i>
+                    <i class="fab fa-twitter icon-space-sm icon-before"></i>
+                    <i class="fab fa-youtube icon-space-sm icon-before"></i>
+                    
+                </div>
+                <!-- <img src="./assets/img/landing_img-1.jpg" class="absolute bg-blend-screen blur-md bg-cover bg-no-repeat "/> -->
+            </div>
             <!-- 2. menu -->
             <div class="flow-root">
                 <!-- left:  logo -->
@@ -49,6 +77,16 @@
             </div>
             <div class="slider-introduction">
                 <p>this is slider</p>
+            </div>
+            <div class="text-center">
+                <div>           
+                    <i class="fa-solid fa-house"></i> <!--Icon-->
+                </div>
+                <div class="text-xl font-semi-bold mb-5">Font Awesome Icon</div>
+                    <p class="text-sm text-gray-400 w-60 mx-auto">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi sed ex odit?
+                          Molestiae odio porro at sequi, vel quia corporis ex deserunt, animi, voluptates eveniet.
+                    </p>
             </div>
         </div>
     </div>
